--- a/style/sass/layout/_search.scss
+++ b/style/sass/layout/_search.scss
@@ -27,11 +27,97 @@
 	}
 	&__category-wrapper {
 		margin: 1rem 0 0 0;
-		&:first-child{
+		&:first-child {
 			padding-left: 0;
 		}
+		&--open {
+			display: none;
+			position: relative;
+			margin: 1rem 15px;
+			&:nth-child(2){
+				margin-left: 0;
+			}
+			.search__filter {
+				width: 100%;
+				display: flex;
+				flex-direction: column;
+				
+				
+				&-head {
+					display: flex;
+					width: 100%;
+				}
+				&-body {
+					width: 100%;
+					height: fit-content;
+					position: absolute;
+					z-index: 999;
+					top: 4.313rem;
+				}
+				&-input {
+					width: calc(100% - 1ch - 24px);
+					height: 4.313rem;
+					font-size: 1.125rem;
+					line-height: 1.35rem;
+					color: #ffffff;
+					border-bottom-left-radius: 0;
+					border-bottom-right-radius: 0;
+					border-top-right-radius: 0;
+					white-space: nowrap;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					&::placeholder {
+						width: 100%;
+						color: rgba(255, 255, 255, 0.5);
+					}
+				}
+				&-btn {
+					height: 4.313rem;
+					line-height: 1.5;
+					font-size: 1.125rem;
+					line-height: 1.35rem;
+					border-bottom-left-radius: 0;
+					border-bottom-right-radius: 0;
+					border-top-left-radius: 0;
+				}
+				&-list {
+					display: flex;
+					flex-direction: column;
+					flex-wrap: wrap;
+					align-items: flex-start;
+					height: max-content;
+					max-height: 30.1rem;
+					width: 100%;
+					border-bottom-left-radius: 5px;
+					border-bottom-right-radius: 5px;
+				}
+				&-itm {
+					min-width: 13.938rem;
+					max-width: 13.938rem;
+					height: 3rem;
+
+					border-radius: 0;
+					&:last-child {
+						border-bottom-right-radius: 5px;
+						border-bottom-left-radius: 5px;
+					}
+					&:nth-child(10) {
+						border-bottom-left-radius: 5px;
+					}
+				}
+				&-link {
+					font-size: 1.125rem;
+					line-height: 1.35rem;
+					color: #ffffff;
+					text-decoration: none;
+				}
+			}
+		}
 	}
-	&__category-button {
+	&__category-btn {
+		height: 4.313rem;
+		font-size: 1.125rem;
+		line-height: 1.35rem;
 		position: relative;
 		&::after {
 			content: "\f078";
@@ -39,7 +125,7 @@
 			font-weight: 900;
 			position: absolute;
 			right: 0.813rem;
-			top: 0.5rem;
+			top: 1.5rem;
 			z-index: 999;
 		}
 	}
