--- a/style/css/main.css
+++ b/style/css/main.css
@@ -196,4 +196,9 @@
   font-family: "Roboto", sans-serif;
   font-size: 0.75rem;
   line-height: 0.75rem;
+  max-height: 4.5rem;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
 }
