--- a/style/sass/layout/_search.scss
+++ b/style/sass/layout/_search.scss
@@ -28,24 +28,30 @@
 		font-family: "Font Awesome 5 Free";
 		margin: 0 0 0 0.813rem;
 	}
+	&__categories{
+		@media (max-width: 991.98px) {
+				justify-content: center;
+			}
+	}
 	&__category-wrapper {
 		margin: 1rem 0 0 0;
 		&:first-child {
-			padding-left: 0;
+			@media (min-width: 992px) {
+				padding-left: 0;
+			}
 		}
 		&--open {
 			display: none;
 			position: relative;
 			margin: 1rem 15px;
-			&:nth-child(2){
+			&:nth-child(2) {
 				margin-left: 0;
 			}
 			.search__filter {
 				width: 100%;
 				display: flex;
 				flex-direction: column;
-				
-				
+				height: fit-content;
 				&-head {
 					display: flex;
 					width: 100%;
@@ -119,7 +125,6 @@
 					line-height: 1.35rem;
 					color: #ffffff;
 					text-decoration: none;
-					
 				}
 			}
 		}
