--- a/style/sass/layout/_search.scss
+++ b/style/sass/layout/_search.scss
@@ -28,10 +28,10 @@
 		font-family: "Font Awesome 5 Free";
 		margin: 0 0 0 0.813rem;
 	}
-	&__categories{
+	&__categories {
 		@media (max-width: 991.98px) {
-				justify-content: center;
-			}
+			justify-content: center;
+		}
 	}
 	&__category-wrapper {
 		margin: 1rem 0 0 0;
@@ -62,6 +62,10 @@
 					position: absolute;
 					z-index: 999;
 					top: 4.313rem;
+
+					@media (max-width: 991.98px) {
+						position: static;
+					}
 				}
 				&-input {
 					width: calc(100% - 1ch - 24px);
@@ -141,7 +145,7 @@
 			position: absolute;
 			right: 0.813rem;
 			top: 1.5rem;
-			z-index: 999;
+			z-index: 998;
 		}
 	}
 	&__category-name {
